TemplateWebApp 전체 디버깅완료 , ASP.NET 상태관리 기법 및 쿠키 그리고 현재 접속자 수 표시 카운터 만들기

--- a/HelloAspNet/FirstWebApp/FirstWebApp.csproj
+++ b/HelloAspNet/FirstWebApp/FirstWebApp.csproj
@@ -75,6 +75,11 @@
     <Content Include="FrmResponseWrite.aspx" />
     <Content Include="FrmServer.aspx" />
     <Content Include="Index.aspx" />
+    <None Include="Scripts\jquery-3.6.0.intellisense.js" />
+    <Content Include="Scripts\jquery-3.6.0.js" />
+    <Content Include="Scripts\jquery-3.6.0.min.js" />
+    <Content Include="Scripts\jquery-3.6.0.slim.js" />
+    <Content Include="Scripts\jquery-3.6.0.slim.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -131,6 +136,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Scripts\jquery-3.6.0.slim.min.map" />
+    <Content Include="Scripts\jquery-3.6.0.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
