11장 [Web.Config 파일 정보 읽어오는 클래스] <appSettings>에 프로그램 내에서 사용되는 설정값 지정 (key값), <connectionString>에 데이터 베이스 연결 문자열 로 두가지 섹션 추가함 그리고 "WebConfigurationManager" using.System.Web.configuration 추가

--- a/HelloAspNet/StateMngWebApp/StateMngWebApp.csproj
+++ b/HelloAspNet/StateMngWebApp/StateMngWebApp.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="FrmCount.aspx" />
+    <Content Include="FrmLogin.aspx" />
     <Content Include="FrmStateMain.aspx" />
     <Content Include="FrmStateShow.aspx" />
     <Content Include="Global.asax" />
@@ -80,6 +81,13 @@
     </Compile>
     <Compile Include="FrmCount.aspx.designer.cs">
       <DependentUpon>FrmCount.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="FrmLogin.aspx.cs">
+      <DependentUpon>FrmLogin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FrmLogin.aspx.designer.cs">
+      <DependentUpon>FrmLogin.aspx</DependentUpon>
     </Compile>
     <Compile Include="FrmStateMain.aspx.cs">
       <DependentUpon>FrmStateMain.aspx</DependentUpon>
