--- a/HelloAspNet/StateMngWebApp/Web.config
+++ b/HelloAspNet/StateMngWebApp/Web.config
@@ -15,4 +15,12 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+	<appSettings>
+		<add key="SITE_NAME" value="PKNU웹사이트"/>
+	</appSettings>
+	<connectionStrings>
+		<add name="Local_Connstring"
+			 connectionString="Data Source=127.0.0.1;Initial Catalog=SMS;Persist Security Info=True;User ID=sa;Password=mssql_p@ssw0rd!"
+			 providerName="System.Data.SqlClient"/>
+	</connectionStrings>
 </configuration>
