--- a/MVCSolutions/MyPortpolio/appsettings.json
+++ b/MVCSolutions/MyPortpolio/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MyPortpolio-B04020FD-5F79-405B-804E-7C6F5690A56F;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=127.0.0.1;Initial Catalog=MvcWebLab;User ID=sa; Password=mssql_p@ssw0rd!"
   },
   "Logging": {
     "LogLevel": {
